gke-objects/argocd/argo-gateway.yml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - argo.sieczak.cloud
        - argocd-server.argocd.svc.cluster.local
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - argo.sieczak.cloud
        - argocd-server.argocd.svc.cluster.local
      tls:
        mode: SIMPLE
        credentialName: argo-sieczak-cloud-tls
